--- a/package/index.html
+++ b/package/index.html
@@ -4,13 +4,14 @@ title: Home
 ---
 
 So, this isn't working?
+
 <script type="text/javascript">
 var _wf = _wf || {};
 
 // ===== ONLY MODIFY THE TWO VARIABLES BELOW =====
 
 // Your blog URL on Wordfaire - if you blog is at wordfaire.com/norwegianpackage, then set it to 'norwegianpackage'.
-_wf.blogUrl = 'package';
+_wf.blogUrl = 'norwegianpackage';
 
 // The ID of the element that you want to display the liveblog in. This can also be a HTML element reference or any other jQuery selector (which returns a single element).
 _wf.holder = '#post-container';
