Trying this out...

--- a/package/index.html
+++ b/package/index.html
@@ -14,7 +14,7 @@ var _wf = _wf || {};
 _wf.blogUrl = 'norwegianpackage';
 
 // The ID of the element that you want to display the liveblog in. This can also be a HTML element reference or any other jQuery selector (which returns a single element).
-_wf.holder = '#post-container';
+_wf.holder = 'body';
 
 // ===== ONLY MODIFY THE TWO VARIABLES ABOVE =====
 
