Trying this out...

--- a/package/index.html
+++ b/package/index.html
@@ -1,8 +1,7 @@
----
-layout: default
-title: Home
----
-
+<html>
+<head>
+</head>
+<body>
 So, this isn't working?
 
 <script type="text/javascript">
@@ -26,3 +25,5 @@ _wf.blogBaseUrl = _wf.baseUrl + _wf.blogUrl + '/';
 	var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(wfs, s);
 })();
 </script>
+</body>
+</html>
