Trying this out...

--- a/package/index.html
+++ b/package/index.html
@@ -2,7 +2,7 @@
 <head>
 </head>
 <body>
-So, this isn't working?
+<h1>NORWEGIAN MYSTERY PARCEL LIVE-BLOG!!!</h1>
 
 <script type="text/javascript">
 var _wf = _wf || {};
@@ -25,5 +25,9 @@ _wf.blogBaseUrl = _wf.baseUrl + _wf.blogUrl + '/';
 	var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(wfs, s);
 })();
 </script>
+<br>
+<br>
+LIVE VIDEO!!!! (Mostly in Norwegian)<br>
+<iframe src="http://www.vgtv.no/embed/?id=55544" width="560" height="315" frameborder="0" allowfullscreen></iframe>
 </body>
 </html>
