--- a/package/index.html
+++ b/package/index.html
@@ -1,5 +1,12 @@
 <html>
 <head>
+body {
+	background-image:url('../css/background.gif');
+    width:745px;
+    margin:0 auto;
+    padding:0;
+    color:#000000;
+}
 </head>
 <body>
 <h1>NORWEGIAN MYSTERY PARCEL LIVE-BLOG!!!</h1>
