--- a/package/index.html
+++ b/package/index.html
@@ -1,8 +1,11 @@
 <html>
 <head>
   <link href="/css/main.css" rel="stylesheet" type="text/css" >
-  
-  <script type="text/javascript">
+</head>
+<body>
+<h1>NORWEGIAN MYSTERY PARCEL LIVE-BLOG!!!</h1>
+
+<script type="text/javascript">
 var _wf = _wf || {};
 
 // ===== ONLY MODIFY THE TWO VARIABLES BELOW =====
@@ -23,14 +26,9 @@ _wf.blogBaseUrl = _wf.baseUrl + _wf.blogUrl + '/';
 	var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(wfs, s);
 })();
 </script>
-</head>
-<body>
-<h1>NORWEGIAN MYSTERY PARCEL LIVE-BLOG!!!</h1>
-
-
 <br>
 <br>
 LIVE VIDEO!!!! (Mostly in Norwegian)<br>
-<iframe src="http://www.vgtv.no/embed/?id=55544" width="560" height="315" frameborder="0" allowfullscreen></iframe>
+<iframe src="http://www.vgtv.no/embed/?id=55544"></iframe>
 </body>
 </html>
