Trying this out...

--- a/package/index.html
+++ b/package/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <link href="/css/main.css" rel="stylesheet" type="text/css" >
+  <link href="/css/live.css" rel="stylesheet" type="text/css" >
 </head>
 <body>
 <h1>NORWEGIAN MYSTERY PARCEL LIVE-BLOG!!!</h1>
@@ -14,7 +14,7 @@ var _wf = _wf || {};
 _wf.blogUrl = 'norwegianpackage';
 
 // The ID of the element that you want to display the liveblog in. This can also be a HTML element reference or any other jQuery selector (which returns a single element).
-_wf.holder = 'body';
+_wf.holder = '.content';
 
 // ===== ONLY MODIFY THE TWO VARIABLES ABOVE =====
 
@@ -29,6 +29,6 @@ _wf.blogBaseUrl = _wf.baseUrl + _wf.blogUrl + '/';
 <br>
 <br>
 LIVE VIDEO!!!! (Mostly in Norwegian)<br>
-<iframe src="http://www.vgtv.no/embed/?id=55544"></iframe>
+<iframe src="http://www.vgtv.no/embed/?id=55544" width="560" height="315" frameborder="0" allowfullscreen></iframe>
 </body>
 </html>
