Trying this out...

--- a/package/index.html
+++ b/package/index.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 <h1>NORWEGIAN MYSTERY PARCEL LIVE-BLOG!!!</h1>
-
+<div id="post-container">
 <script type="text/javascript">
 var _wf = _wf || {};
 
@@ -26,6 +26,7 @@ _wf.blogBaseUrl = _wf.baseUrl + _wf.blogUrl + '/';
 	var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(wfs, s);
 })();
 </script>
+</div>
 <br>
 <br>
 LIVE VIDEO!!!! (Mostly in Norwegian)<br>
