Trying this out...

--- a/package/index.html
+++ b/package/index.html
@@ -5,6 +5,8 @@
 <body>
 <h1>NORWEGIAN MYSTERY PARCEL LIVE-BLOG!!!</h1>
 
+<div id="post-container">
+  <div class="content">
 <script type="text/javascript">
 var _wf = _wf || {};
 
@@ -26,7 +28,8 @@ _wf.blogBaseUrl = _wf.baseUrl + _wf.blogUrl + '/';
 	var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(wfs, s);
 })();
 </script>
-
+    </div>
+</div>
 <br>
 <br>
 LIVE VIDEO!!!! (Mostly in Norwegian)<br>
