--- a/package/index.html
+++ b/package/index.html
@@ -15,7 +15,7 @@ var _wf = _wf || {};
 _wf.blogUrl = 'norwegianpackage';
 
 // The ID of the element that you want to display the liveblog in. This can also be a HTML element reference or any other jQuery selector (which returns a single element).
-_wf.holder = 'container';
+_wf.holder = 'blockquote';
 
 // ===== ONLY MODIFY THE TWO VARIABLES ABOVE =====
 
