Trying this out...

--- a/package/index.html
+++ b/package/index.html
@@ -3,6 +3,8 @@
   <link href="/css/live.css" rel="stylesheet" type="text/css" >
 </head>
 <body>
+<h2>NORWEGIAN MYSTERY PARCEL LIVE!!!</h2>
+
 
 <script type="text/javascript">
 var _wf = _wf || {};
