Trying this out...

--- a/package/index.html
+++ b/package/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <link href="/css/live.css" rel="stylesheet" type="text/css" >
-  <h2>NORWEGIAN MYSTERY PARCEL LIVE!!!</h2>
+  <h2>NORWEGIAN MYSTERY<br> PARCEL LIVE!!!</h2>
 </head>
 <body>
 
