--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@ You have somehow stumbled over my personal website. Sorry about that.
 <a href="http://www.christianleonardquale.com/feed.xml">RSS feed</a>
 <br><br>
 And now I'm testing some thoughts...
-{% for post in site.categories.photos limit:2 %}
+{% for post in site.categories.thought limit:2 %}
     {{ post.date | date: "%e %B, %Y" }} &raquo; <a href="{{ post.url }}">{{ post.title }}</a><br>
 {% endfor %}
