Trying stuff on the index.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ You have somehow stumbled over my personal website. Sorry about that.
   <a href="http://fusion.google.com/add?source=atgs&feedurl=http%3A//www.christianleonardquale.com/feed.xml"><img src="http://gmodules.com/ig/images/plus_google.gif" border="0" alt="Add to Google"></a> - 
 <a href="http://www.christianleonardquale.com/feed.xml">RSS feed</a>
 <br><br>
-And now I'm testing some thoughts...
+And now I'm testing some thoughts... <br>
 {% for post in site.categories.thought limit:2 %}
-    {{ post.date | date: "%e %B, %Y" }} &raquo; <a href="{{ post.url }}">{{ post.title }}</a><br>
+    {{ post.date | date: "%e %B" }} &raquo; <a href="{{ post.url }}">{{ post.title }}</a><br>
 {% endfor %}
