Added secret Olympian.

--- a/bookaweek/index.html
+++ b/bookaweek/index.html
@@ -141,9 +141,15 @@ title: Stuff
 		<td valign="top">It is impossible for me to be objective about this book. Obviously the end of the Narnia-series, and the conclusion to seven books of fantastic story-telling. I had goosebumps while reading about half of it, and I'm not even sure why. I don't care one bit that it might have been a little cheesy, cliched at times, and preachy. It was a moving, worthy and brilliant end to a great series. Not that it needs saying, but it's hard not to imagine that the Chronicles of Narnia will still be read and enjoyed for hundreds of years to come. 4/5 </td>
 		<td valign="top">23-09-12</td>
 	</tr>
+<tr>
+		<td valign="top">20</td>
+		<td valign="top">Anon:<br>"The Secret Olympian: The inside story of the Olympic experience"</td>
+		<td valign="top">During the Olympics I heard this book mentioned, so I figured I would give it a try. It describes the Olympics seen through the eyes of an Olympic athlete, from the point where they get told they are competing, to the point where they are done competing and don't know what to do with the rest of their lives. It's based on the personal experiences of the author, as well as on interviews with other Olympians. The story is told well, and general Olympic history and trivia is interjected at appropriate places. There's a good combination of interesting technical details relating to athletes and Olympic behind-the-scenes stuff, as well as plenty of personal emotions and anecdotes. The sum total becomes a read which is at times really interesting, at times rather emotional, and overall rather enjoyable. The main problem with the book is that it seems to have been marketed as a tell-all tabloid tale of sex and scandals. That's not what it is, and thank God for that. 3.5/5</td>
+		<td valign="top">30-09-12</td>
+	</tr>
 </table>
 <br> <br>
 And, to make sure I don't cheat myself by reading only short books, an average page-count, which I am going to try keeping at a respectable level of at least 250-300. Since I mostly read e-books, I'm basing these on page-counts from goodreads.com.<br>
-Total pages read: 6605 <br>
-Total books read: 19 <br>
-Average page-count: 348
+Total pages read: 6829 <br>
+Total books read: 20 <br>
+Average page-count: 341
