--- a/bookaweek/index.html
+++ b/bookaweek/index.html
@@ -115,13 +115,13 @@ title: Stuff
 		<td valign="top">15</td>
 		<td valign="top">C. S. Lewis:<br>"The Magician's Nephew"</td>
 		<td valign="top">The chronological beginning of the Narnia-series, this story tells of how Narnia came to be. Having read the other books, it's quite fun reading about how it all started. This is a quick, cheerful, feel-good read. I quite enjoyed it, more so than a few of the other Narnia-books. 4/5 </td>
-		<td valign="top">26-08-12</td>
+		<td valign="top" style="background-color:#00FF00;">26-08-12</td>
 	</tr>
 <tr>
 		<td valign="top">16</td>
 		<td valign="top">Wilkie Collins:<br>"The Moonstone"</td>
 		<td valign="top">I tend to be slightly sceptical toward books that are considered classics, especially the ones written ages ago. I was therefore somewhat sceptical toward The Moonstone, a classic which is almost 150 years old. My scepticism was put well and truly to shame. The Moonstone is an original mystery, in every sense of the word, which is centred around a valuable diamond said to be cursed. The story is told in the form of statements written after the fact by some of the people involved in the story, recounting events as they observed them. This works extremely well. The differences in perspective adds an additional level to a story which is already great. The personality of the writers shines through in the narratives written by them, and some of the more personal observations and musings of the characters made me laugh out loud to the extent at which I got looks, on both an airplane and a train. I could go on about how great this book is, and how much I enjoyed it, but I won't. I'd just encourage you to read it. Unless you really don't like the mystery-genre, I think you'll enjoy this book. If you're lucky, you'll enjoy it as much as I did. 4.5/5 </td>
-		<td valign="top">02-09-12</td>
+		<td valign="top" style="background-color:#00FF00;">02-09-12</td>
 	</tr>
 <tr>
 		<td valign="top">17</td>
@@ -147,9 +147,15 @@ title: Stuff
 		<td valign="top">During the Olympics I heard this book mentioned, so I figured I would give it a try. It describes the Olympics seen through the eyes of an Olympic athlete, from the point where they get told they are competing, to the point where they are done competing and don't know what to do with the rest of their lives. It's based on the personal experiences of the author, as well as on interviews with other Olympians. The story is told well, and general Olympic history and trivia is interjected at appropriate places. There's a good combination of interesting technical details relating to athletes and Olympic behind-the-scenes stuff, as well as plenty of personal emotions and anecdotes. The sum total becomes a read which is at times really interesting, at times rather emotional, and overall rather enjoyable. The main problem with the book is that it seems to have been marketed as a tell-all tabloid tale of sex and scandals. That's not what it is, and thank God for that. 3.5/5</td>
 		<td valign="top">30-09-12</td>
 	</tr>
+<tr>
+		<td valign="top">21</td>
+		<td valign="top">P. G. Wodehouse:<br>"Very Good, Jeeves!"</td>
+		<td valign="top">Unsurprisingly, this Wodehouse book contains short stories in which Wooster and his friends get helped out with their problems by the Gentleman's man-servant, Jeeves. The style is, of course, the same as the other Wodehouse-books I've read, and that is not a bad thing. Unfortunately I didn't find this particular collection quite as funny as the two preceding Jeeves-books, and at times everything became a little too predictable. Still a decent read, but far from my favourite Wodehouse. 3.5/5</td>
+		<td valign="top">07-10-12</td>
+	</tr>
 </table>
 <br> <br>
 And, to make sure I don't cheat myself by reading only short books, an average page-count, which I am going to try keeping at a respectable level of at least 250-300. Since I mostly read e-books, I'm basing these on page-counts from goodreads.com.<br>
-Total pages read: 6829 <br>
-Total books read: 20 <br>
-Average page-count: 341
+Total pages read: 7133 <br>
+Total books read: 21 <br>
+Average page-count: 340
