--- a/fw/index.html
+++ b/fw/index.html
@@ -3,9 +3,14 @@
 </head>
 <body>
 <h2>Schedule-page for the best Freshers Week team! (Team 3)</h2>
-Calendar showing all events we are doing:
-<iframe src="https://www.google.com/calendar/embed?title=All%20events%20for%20Team%203&amp;showTabs=0&amp;showCalendars=0&amp;showTz=0&amp;mode=WEEK&amp;height=800&amp;wkst=2&amp;bgcolor=%23FFFFFF&amp;src=t5n0hp6poi4j2s0u6om57ahccs%40group.calendar.google.com&amp;color=%232F6309&amp;ctz=Europe%2FLondon" style=" border-width:0 " width="1200" height="800" frameborder="0" scrolling="no"></iframe>
+Calendar showing all events we are doing:<br>
+<iframe src="https://www.google.com/calendar/embed?title=All%20events%20for%20Team%203&amp;showTabs=0&amp;showCalendars=0&amp;showTz=0&amp;mode=WEEK&amp;height=800&amp;wkst=2&amp;bgcolor=%23FFFFFF&amp;src=t5n0hp6poi4j2s0u6om57ahccs%40group.calendar.google.com&amp;color=%232F6309&amp;ctz=Europe%2FLondon" style=" border-width:0 " width="1100" height="800" frameborder="0" scrolling="no"></iframe> <br>
 (press the arrow-buttons in the top left to scroll between the two weeks)
+<br><br>
+Individual schedules:
+<br><br>
+Team Leader:<br>
+
 
 
 
