Added my schedule...

--- a/fw/index.html
+++ b/fw/index.html
@@ -9,8 +9,16 @@ Calendar showing all events we are doing:<br>
 <br><br>
 Individual schedules:
 <br><br>
-Team Leader:<br>
+<a href="christian.html">Christian</a> <br><br>
 
+<a href="ayla.html">Ayla</a><br>
+<a href="christine.html">Christine</a><br>
+<a href="kiren.html">Kiren</a><br>
+<a href="louis.html">Louis</a><br>
+<a href="marija.html">Marija</a><br>
+<a href="sanduni.html">Sanduni</a><br>
+<a href="siyu.html">Sylva</a><br>
+<a href="tom.html">Tom</a><br>
 
 
 
